# BT817-EVE

./: .gitignore  CMakeLists.txt  lcd.c  readme.md
assets/: images_raw.s  startup.xcf
lib/eve/include/: EVE_config.h
lib/eve/ports/eve_arch_rpi/: EVE_MCU_RP2040.c
lib/transport/: transport.c
